--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 	>
 		<a href="/" aria-label="Inicio" class="ml-3 pt-1 lg:ml-0">
 			<Image
-				src={logo}
+				src={logo.src}
 				alt="Vidal Padilla Logo"
 				class="h-20 w-20"
 				title="Logo Vidal Padilla"
@@ -63,7 +63,7 @@ import { Image } from "astro:assets";
 		>
 			<a href="/" aria-label="Inicio" class="ml-3 pt-1">
 				<Image
-					src={logo}
+					src={logo.src}
 					alt="Vidal Padilla Logo"
 					class="h-20 w-20"
 					width={80}
